# cassie-gazebo-sim

cassie/: cassie.sdf  cassie.world
cassie_with_torso/: cassie_with_torso.sdf
plugin/: CMakeLists.txt  keyboard_readme.txt
plugin/include/: CassiePlugin.hpp  KeyboardInput.hpp  cassie_core_sim.h
plugin/src/: CassiePlugin.cpp  KeyboardInput.cpp
worlds/: cassie_bullet.world  cassie_with_torso.world  cassie_with_torso_bullet.world
